common/src/main/resources/deployments/keycloak/deployment.yaml
apiVersion: v1
kind: List
items:
- apiVersion: apps.openshift.io/v1
  kind: DeploymentConfig
  metadata:
    name: keycloak
  spec:
    replicas: 1
    selector:
      name: keycloak
    strategy:
      type: Recreate
    template:
      metadata:
        labels:
          name: keycloak
        name: keycloak
      spec:
        containers:
        - name: keycloak
          image: ''
          imagePullPolicy: Always
          livenessProbe:
            exec:
              command:
              - /bin/bash
              - -c
              - /opt/eap/bin/livenessProbe.sh
            initialDelaySeconds: 120
          ports:
          - containerPort: 8778
            name: jolokia
            protocol: TCP
          - containerPort: 8080
            name: http
            protocol: TCP
          - containerPort: 8443
            name: https
            protocol: TCP
          - containerPort: 8888
            name: ping
            protocol: TCP
          readinessProbe:
            exec:
              command:
              - /bin/bash
              - -c
              - /opt/eap/bin/readinessProbe.sh
          resources:
            limits:
              memory: 1Gi
          volumeMounts:
          - mountPath: /keycloak
            name: keycloak-realm-volume
            readOnly: true
          - mountPath: /etc/x509/https
            name: keycloak-cert-https-volume
            readOnly: true
          - mountPath: /etc/x509/jgroups
            name: keycloak-cert-jgroups-volume
            readOnly: true
        terminationGracePeriodSeconds: 75
        volumes:
        - name: keycloak-realm-volume
          configMap:
            name: keycloak-realm
        - name: keycloak-cert-https-volume
          secret:
            secretName: keycloak-cert-https-secret
        - name: keycloak-cert-jgroups-volume
          secret:
            secretName: keycloak-cert-jgroups-secret
    triggers:
    - type: ConfigChange
    - type: ImageChange
      imageChangeParams:
        automatic: true
        containerNames:
        - keycloak
        from:
          kind: ImageStreamTag
          name: keycloak:latest

- apiVersion: v1
  kind: Service
  metadata:
    name: keycloak
    annotations:
      service.alpha.openshift.io/serving-cert-secret-name: keycloak-cert-https-secret
  spec:
    ports:
    - port: 8443
      targetPort: 8443
    selector:
      name: keycloak

- apiVersion: v1
  kind: Service
  metadata:
    name: keycloak-ping
    annotations:
      service.alpha.kubernetes.io/tolerate-unready-endpoints: "true"
      service.alpha.openshift.io/serving-cert-secret-name: keycloak-cert-jgroups-secret
  spec:
    clusterIP: None
    ports:
    - name: ping
      port: 8888
    selector:
      name: keycloak

- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    name: keycloak
  spec:
    to:
      name: keycloak
    tls:
      termination: reencrypt

# for test purposes, it's easier to use plain HTTP instead of HTTPS

- apiVersion: v1
  kind: Service
  metadata:
    name: keycloak-plain
  spec:
    ports:
      - port: 8080
        targetPort: 8080
    selector:
      name: keycloak

- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    name: keycloak-plain
  spec:
    to:
      name: keycloak-plain
